x1126: When OriginalSampleRegister uses lt Cassette, use bs Tissue